force-app/main/default/objects/PriceMin__c/PriceMin__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PriceMin</label>
</CustomObject>