force-app/main/default/objects/PriceMin__c/fields/MinDays__c.field-meta.xml
<CustomField>
    <fullName>MinDays__c</fullName>
    <label>MinDays</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>