force-app/main/default/objects/PriceMin__c/fields/Minimum_Training_Days__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Training_Days__c</fullName>
    <label>Minimum Training Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>