force-app/main/default/objects/PriceMin__c/fields/PaymentDelay__c.field-meta.xml
<CustomField>
    <fullName>PaymentDelay__c</fullName>
    <label>PaymentDelay</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>